--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@directus/sdk": "^20.3.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "cookies-next": "^6.1.1",
+    "date-fns": "^4.1.0",
+    "directus": "^11.14.0",
     "next": "16.1.0",
+    "platformscode-new-react": "^0.1.29",
+    "postcss": "^8.5.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0",
